[gd_scene load_steps=9 format=3 uid="uid://kya1376skusk"]

[ext_resource type="PackedScene" uid="uid://ehkvloc1od3o" path="res://cube_piece.tscn" id="1_n1nec"]
[ext_resource type="Script" path="res://cube.gd" id="1_o2y4i"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3f8hf"]
size = Vector3(0.1, 5, 5)

[sub_resource type="BoxMesh" id="BoxMesh_ddnd3"]
size = Vector3(0.1, 5, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_fbmkb"]
size = Vector3(5, 0.1, 5)

[sub_resource type="BoxMesh" id="BoxMesh_xs7ha"]
size = Vector3(5, 0.1, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_hxciq"]
size = Vector3(5, 5, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_af3y7"]
size = Vector3(5, 5, 0.1)

[node name="Cube" type="Node3D"]
script = ExtResource("1_o2y4i")

[node name="Pivot1" type="Node3D" parent="."]

[node name="CubePiece1" parent="Pivot1" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Pivot2" type="Node3D" parent="."]

[node name="CubePiece2" parent="Pivot2" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)

[node name="Pivot3" type="Node3D" parent="."]

[node name="CubePiece3" parent="Pivot3" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, -1)

[node name="Pivot4" type="Node3D" parent="."]

[node name="CubePiece4" parent="Pivot4" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 1, 0)

[node name="Pivot5" type="Node3D" parent="."]

[node name="CubePiece5" parent="Pivot5" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1)

[node name="Pivot6" type="Node3D" parent="."]

[node name="CubePiece6" parent="Pivot6" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 1, -1)

[node name="Pivot7" type="Node3D" parent="."]

[node name="CubePiece7" parent="Pivot7" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 1, 0)

[node name="Pivot8" type="Node3D" parent="."]

[node name="CubePiece8" parent="Pivot8" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -1, 1, 1)

[node name="Pivot9" type="Node3D" parent="."]

[node name="CubePiece9" parent="Pivot9" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 1, -1)

[node name="Pivot10" type="Node3D" parent="."]

[node name="CubePiece10" parent="Pivot10" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true

[node name="Pivot11" type="Node3D" parent="."]

[node name="CubePiece11" parent="Pivot11" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="Pivot12" type="Node3D" parent="."]

[node name="CubePiece12" parent="Pivot12" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1)

[node name="Pivot13" type="Node3D" parent="."]

[node name="CubePiece13" parent="Pivot13" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 0, 0)

[node name="Pivot14" type="Node3D" parent="."]

[node name="CubePiece14" parent="Pivot14" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)

[node name="Pivot15" type="Node3D" parent="."]

[node name="CubePiece15" parent="Pivot15" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 0, -1)

[node name="Pivot16" type="Node3D" parent="."]

[node name="CubePiece16" parent="Pivot16" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 0, 0)

[node name="Pivot17" type="Node3D" parent="."]

[node name="CubePiece17" parent="Pivot17" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 0, 1)

[node name="Pivot18" type="Node3D" parent="."]

[node name="CubePiece18" parent="Pivot18" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0, -1)

[node name="Pivot19" type="Node3D" parent="."]

[node name="CubePiece19" parent="Pivot19" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, -1, 0)

[node name="Pivot20" type="Node3D" parent="."]

[node name="CubePiece20" parent="Pivot20" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -1, 1)

[node name="Pivot21" type="Node3D" parent="."]

[node name="CubePiece21" parent="Pivot21" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, -1, -1)

[node name="Pivot22" type="Node3D" parent="."]

[node name="CubePiece22" parent="Pivot22" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1.19249e-08, 8.74228e-08, 1, 0, -1, 8.74228e-08, 1, -1.04251e-15, -1.19249e-08, 1, -1, 0)

[node name="Pivot23" type="Node3D" parent="."]

[node name="CubePiece23" parent="Pivot23" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(4.37114e-08, -3.82137e-15, 1, -8.74228e-08, -1, 0, 1, -8.74228e-08, -4.37114e-08, 1, -1, 1)

[node name="Pivot24" type="Node3D" parent="."]

[node name="CubePiece24" parent="Pivot24" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 1, -1, -1)

[node name="Pivot25" type="Node3D" parent="."]

[node name="CubePiece25" parent="Pivot25" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.82137e-15, 4.37114e-08, -1, -1, 0)

[node name="Pivot26" type="Node3D" parent="."]

[node name="CubePiece26" parent="Pivot26" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, -1, -1, 1)

[node name="Pivot27" type="Node3D" parent="."]

[node name="CubePiece27" parent="Pivot27" instance=ExtResource("1_n1nec")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.82137e-15, 4.37114e-08, -1, -1, -1)

[node name="Collider_X" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
disable_mode = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collider_X"]
shape = SubResource("BoxShape3D_3f8hf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Collider_X"]
mesh = SubResource("BoxMesh_ddnd3")

[node name="Collider_Y" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
disable_mode = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collider_Y"]
shape = SubResource("BoxShape3D_fbmkb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Collider_Y"]
mesh = SubResource("BoxMesh_xs7ha")

[node name="Collider_Z" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
disable_mode = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collider_Z"]
shape = SubResource("BoxShape3D_hxciq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Collider_Z"]
mesh = SubResource("BoxMesh_af3y7")

[connection signal="area_entered" from="Collider_X" to="." method="_on_collider_y_area_entered"]
[connection signal="area_entered" from="Collider_Y" to="." method="_on_collider_y_area_entered"]
[connection signal="area_entered" from="Collider_Z" to="." method="_on_collider_y_area_entered"]
